--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,63 +1,26 @@
-// .boxes .container{
-//     display: flex;
-//     justify-content: space-between;
-// }
-
-// .box {
-//     flex: 1;
-//     margin: 20px 10px;
-//     background: #118acf;
-//     color: #fff;
-//     border-radius: 10px;
-//     padding: 15px 20px;
-//     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
-// }
-
-// .box i {
-//     margin-right: 10px;
-// }
-
-// something to fix under here
-
-// section{
-//     min-height: 100vh;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
-
 section .container {
   min-height: 70vh;
-  margin: 100px;
+  // margin: 100px;
   display: flex;
-}
+  line-height: 70px;
 
-// section h2 {
-//     font-size: 40px;
-//     text-align: center;
-//     text-transform: uppercase;
-// }
-
-section .text-card {
-  font-size: 30px;
-  text-align: center;
-  color: #2f2d2e; //special color
-  margin: 20px;
-  padding: 20px;
-
-  h2 {
-    font-size: 40px;
+  .text-card {
+    font-size: 30px;
     text-align: center;
-    text-transform: uppercase;
+    color: #2f2d2e; //special color
+    margin: 20px;
+    padding: 20px;
+
+    h2 {
+      font-size: 40px;
+      text-align: center;
+      text-transform: uppercase;
+    }
   }
 }
 
-.third-section {
-  background-color: #e7ecef; 
-  .container {
-    min-height: 70vh;
-    // background-color: blue;
-  }
+.second_section {
+  background-color: #e7ecef;
 }
 
 .reveal {
@@ -78,20 +41,19 @@ section .text-card {
   grid-template-columns: repeat(3, 323px);
   gap: 100px;
   justify-content: center;
-  background-color: #e7ecef;
-  // might change min height
-  min-height: 70vh;
+  // background-color: #e7ecef;
 }
 
 .item {
   border: 2px solid #fa9500;
   border-radius: 4px;
-  margin: 100px 0;
+  margin: 70px 0;
+  // just content space around instead of margin top and bottom
 
-    img{
-        // height: 600px;
-        width: 320px;
-    }
+  img {
+    // height: 600px;
+    width: 320px;
+  }
 }
 
 .details {
@@ -100,4 +62,125 @@ section .text-card {
   text-align: center;
   padding: 10px;
   gap: 10px;
+
+  h3{
+    color: #058ed9;
+    font-weight: bold;
+  }
+
+  p{
+    text-align: left;
+    margin: 0 20px;
+
+    a{
+    text-decoration: none;
+    color: #058ed9;}
+  }
+}
+
+
+
+
+
+.just-testing-2 {
+  display: flex;
+  flex-direction: row;
+  background: #058ed9;
+  // border-bottom:1px solid #1771a1;
+  color: white;
+  // min-height: 80vh;
+
+  // :not(:first-child){
+  //   // background-color: red;
+  //   margin: 20px;
+  // }
+
+  :last-child{
+    width: 60%;
+  }
+
+  div {
+    // :not(:last-child){
+    display: flex;
+    flex-direction: column;
+    // margin:0 20px 0 60px;
+    // margin-right: 30px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    // }
+    // button{
+    //   width: 10px;
+    // }
+
+    // :last-child {
+    //   align-self: self-start;
+    //   color: red;
+    //   font-size: 14px;
+    //   font-weight: bolder;
+    //   text-decoration: none;
+    //   border-radius: 5px;
+    //   border: none;
+    //   padding: 12px 16px;
+    //   background: white;
+    //   &:hover {
+    //     transform: scale(1.1);
+    //     color: green;
+    //   }
+    //   // flex-basis: 10px;
+    // }
+  }
+}
+
+
+
+
+
+
+.just-testing {
+  display: flex;
+  flex-direction: row;
+  background: #fa9500;
+  border-bottom:1px solid #1771a1;
+  color: white;
+
+  // :not(:first-child){
+  //   // background-color: red;
+  //   margin: 20px;
+  // }
+
+  :first-child{
+    width: 63%;
+  }
+
+  div {
+    // :not(:last-child){
+    display: flex;
+    flex-direction: column;
+    margin:0 60px 0 20px;
+    // margin-right: 30px;
+    justify-content: center;
+    text-align: left;
+    // }
+    // button{
+    //   width: 10px;
+    // }
+
+    :last-child {
+      align-self: self-start;
+      color: red;
+      font-size: 14px;
+      font-weight: bolder;
+      text-decoration: none;
+      border-radius: 5px;
+      border: none;
+      padding: 12px 16px;
+      background: white;
+      &:hover {
+        transform: scale(1.1);
+        color: green;
+      }
+      // flex-basis: 10px;
+    }
+  }
 }
