--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-@import "header";
-@import "content";
-@import "footer";
+@use "header";
+@use "content";
+@use "footer";
 
 html{
     font-size: 100%;
