--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -95,15 +95,15 @@ section .container {
   //   margin: 20px;
   // }
 
-  :last-child{
-    width: 60%;
-  }
+  // :last-child{
+  //   width: 60%;
+  // }
 
   div {
     // :not(:last-child){
     display: flex;
     flex-direction: column;
-    // margin:0 20px 0 60px;
+    margin:0 20px 0 60px;
     // margin-right: 30px;
     justify-content: center;
     align-items: center;
@@ -149,9 +149,9 @@ section .container {
   //   margin: 20px;
   // }
 
-  :first-child{
-    width: 63%;
-  }
+  // :first-child{
+  //   width: 99vh;
+  // }
 
   div {
     // :not(:last-child){
